--- a/styles/_graph.scss
+++ b/styles/_graph.scss
@@ -42,12 +42,13 @@
     box-shadow: 0 .4rem 2rem rgba(0, 0, 0, .5);
     height: calc(100vh - 3rem);
     overflow: hidden;
+    overscroll-behavior: contain;
     position: relative;
     width: calc(100vw - 3rem);
 
     @media screen and (max-width: $size-sm) {
-      height: calc(100vh - .5rem);
-      width: calc(100vw - .5rem);
+      height: 100%;
+      width: 100%;
     }
 
     .loading-mask {
