--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -261,6 +261,10 @@
     max-height: calc(100vh - 1rem);
     padding: .5rem;
     width: 100%;
+
+    @supports (height: 100dvh) {
+      max-height: calc(100dvh - .5rem);
+    }
   }
 
   .profile-widget-half {
@@ -958,6 +962,10 @@
   top: 0;
   width: 100vw;
   z-index: 199;
+
+  @supports (height: 100dvh) {
+    height: 100dvh;
+  }
 
   .preview-overlay {
     background-position: center;
