--- a/styles/_graph.scss
+++ b/styles/_graph.scss
@@ -47,8 +47,10 @@
     width: calc(100vw - 3rem);
 
     @media screen and (max-width: $size-sm) {
-      height: 100%;
-      width: 100%;
+      @supports (height: 100dvh) {
+        height: calc(100dvh - .5rem);
+        width: calc(100dvw - .5rem);
+      }
     }
 
     .loading-mask {
