--- a/styles/_feed.scss
+++ b/styles/_feed.scss
@@ -153,7 +153,7 @@
           background: $bg-color;
           border-radius: .4rem;
           box-shadow: 0 .1rem .2rem rgba($dark-color, .15);
-          height: 100%;
+          height: auto;
           max-height: 16rem;
           width: auto;
         }
