--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -413,7 +413,7 @@
       align-items: center;
       display: flex;
     }
-    
+
     .profile-widget-footer {
       background: $light-color;
       border-radius: .5rem;
@@ -442,9 +442,19 @@
     overflow: hidden;
     position: relative;
 
+    @supports (height: 100dvh) {
+      height: 16dvh;
+    }
+
+    height: 7.5rem;
+
     &.active {
       box-shadow: 0 .4rem 1.6rem -.4rem rgba($dark-color, .15), 0 .1rem .2rem rgba($dark-color, .01);
-      height: 100%;
+      @supports (height: 100dvh) {
+        height: 100dvh;
+      }
+      height: 100vh;
+      max-height: 100%;
 
       .collection-switcher {
         box-shadow: 0 .4rem .4rem -.2rem rgba($dark-color, .1);
@@ -511,17 +521,17 @@
       user-select: none;
       margin: 0 -1rem;
       overflow: hidden;
-    
+
       .collection-list {
         display: flex;
         gap: .1rem;
         overflow: auto hidden;
         padding: .25rem 1rem;
-    
+
         &::-webkit-scrollbar {
           display: none;
         }
-    
+
         .collection-item {
           background: #fff;
           border-radius: .6rem;
@@ -531,41 +541,41 @@
           padding: .25rem;
           transition: all .25s ease-in-out;
           width: 3.1rem;
-    
+
           &::after {
             bottom: auto;
             top: 100%;
             transform: translate(-50%, -$unit-2);
           }
-    
+
           &:focus,
           &:hover {
             background: lighten($bg-color, 2%);
-    
+
             &::after {
               transform: translate(-50%, $unit-1);
             }
           }
-    
+
           &.active {
             background: $bg-color;
-    
+
             .img-responsive {
               box-shadow: 0 .1rem .4rem rgba($dark-color, .25);
             }
           }
-    
+
           .collection-img {
             border-radius: .5rem;
             height: 2.6rem;
             width: 2.6rem;
-    
+
             &.collection-img-more {
               .img-responsive {
                 padding: .5rem;
               }
             }
-    
+
             .img-responsive {
               background: $light-color;
               border-radius: .5rem;
@@ -580,7 +590,7 @@
         }
       }
     }
-    
+
     .nft-collection {
       position: relative;
       flex: 1 1;
@@ -588,21 +598,21 @@
       overflow-y: auto;
       overscroll-behavior: contain;
       padding: 0 .5rem;
-    
+
       .nft-collection-list {
         .nft-collection-item {
           margin-top: .5rem;
         }
-    
+
         .collection-title {
           align-items: center;
           display: flex;
           padding: 1rem 0 .5rem 0;
-    
+
           .collection-logo {
             flex: 0 0 1.2rem;
             margin-right: .25rem;
-    
+
             .img-responsive {
               border-radius: .4rem;
               box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
@@ -612,30 +622,30 @@
               width: 1.2rem;
             }
           }
-    
+
           .collection-name {
             font-size: .8rem;
             font-weight: 700;
             letter-spacing: -.025em;
           }
         }
-    
+
         .nft-list {
           position: relative;
           display: flex;
           flex-wrap: wrap;
           margin: 0 -.5rem 1rem -.5rem;
-    
+
           .nft-container {
             flex: 0 0 33.3333%;
             width: 33.3333%;
             min-width: 8rem;
-    
+
             @media screen and (max-width: $size-md) {
               flex: 0 0 50%;
             }
           }
-    
+
           .nft-item {
             border-radius: .75rem;
             padding: .5rem;
@@ -644,12 +654,12 @@
             overflow: hidden;
             -webkit-box-orient: vertical;
             -webkit-line-clamp: 2;
-    
+
             &:focus,
             &:hover {
               background: lighten($bg-color, 2%);
             }
-    
+
             .nft-img-container {
               margin-bottom: .5rem;
               position: relative;
@@ -684,13 +694,13 @@
                   display: none;
                   padding: 0 .25rem;
                 }
-          
+
                 .preview-network-icon {
                   height: .75rem;
                   width: .75rem;
                 }
               }
-    
+
               .img-responsive {
                 aspect-ratio: 1 / 1;
                 border-radius: .5rem;
@@ -701,12 +711,12 @@
                 transition: filter 0.3s ease-out;
               }
             }
-    
+
             .nft-collection-name {
               color: $gray-color-dark;
               font-size: .5rem;
             }
-    
+
             .nft-name {
               font-size: .75rem;
               font-weight: 700;
@@ -763,6 +773,7 @@
       }
     }
   }
+
   // Social Widget
   .profile-widget-feeds {
     background: $light-color;
@@ -1009,6 +1020,7 @@
       }
 
       .preview-image {
+
         .img-responsive,
         .video-responsive {
           max-width: 98vw;
@@ -1036,6 +1048,7 @@
     position: relative;
 
     &.preview-image-poap {
+
       .img-container,
       .img-responsive {
         border-radius: 50%;
