--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -105,6 +105,25 @@ body {
       max-width: 24rem;
     }
 
+    .modal-preview-image-container {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .modal-preview-image {
+        max-height: 95vh;
+        object-fit: contain;
+
+        .video-responsive,
+        .img-responsive {
+          border-radius: .5rem;
+          max-height: 95vh;
+        }
+      }
+    }
+
     .modal-close-icon {
       position: fixed;
       right: 1rem;
@@ -479,6 +498,7 @@ body {
   0% {
     background-position-x: 0em;
   }
+
   100% {
     background-position-x: 25em;
   }
