--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -105,21 +105,48 @@ body {
       max-width: 24rem;
     }
 
-    .modal-preview-image-container {
+    .modal-preview-container {
       width: 100%;
       height: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
 
-      .modal-preview-image {
-        max-height: 95vh;
-        object-fit: contain;
+      .preview-image-container {
+        position: relative;
 
-        .video-responsive,
-        .img-responsive {
-          border-radius: .5rem;
+        .btn {
+          width: unset;
+          height: unset;
+          padding: .2rem
+        }
+
+        .external-icon {
+          &:hover{
+            opacity: 1;
+          }
+          opacity: 0;
+          position: absolute;
+          top: 2%;
+          right: 2%;
+          transition: opacity .2s ease;
+        }
+
+        .modal-preview-image {
+          &:hover {
+            &+.external-icon {
+              opacity: 1;
+            }
+          }
+
           max-height: 95vh;
+          object-fit: contain;
+
+          .video-responsive,
+          .img-responsive {
+            border-radius: .5rem;
+            max-height: 95vh;
+          }
         }
       }
     }
