--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -107,11 +107,10 @@ body {
 
     .modal-article-container {
       width: 100%;
-      height: fit-content;
+      height: 100%;
       background: #fff;
-      max-width: 70%;
-      min-height: 20vh;
-      max-height: 95vh;
+      max-width: 90%;
+      max-height: 90vh;
       margin: auto;
       padding: 1.25rem;
       box-sizing: border-box;
