--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -103,6 +103,7 @@ body {
       height: auto;
       max-height: calc(100vh - 4rem);
       max-width: 24rem;
+      padding: 2rem;
     }
 
     .modal-article-container {
