chore: article img size

--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -116,6 +116,9 @@ body {
       box-sizing: border-box;
       overflow-y: auto;
       border-radius: .5rem;
+      img{
+        width: 100%;
+      }
     }
 
     .modal-preview-container {
