--- a/styles/_feed.scss
+++ b/styles/_feed.scss
@@ -186,13 +186,7 @@
         }
 
         .feed-target-content {
-          display: -webkit-box;
-          text-overflow: ellipsis;
-          overflow: hidden;
-          -webkit-box-orient: vertical;
-          -webkit-line-clamp: 6;
-          word-break: break-word;
-          width: 100%;
+          margin-top: .25rem;
 
           &.media-gallery {
             display: flex;
@@ -215,7 +209,6 @@
       }
 
       a.feed-target {
-
         &:focus,
         &:hover {
           border-color: darken($border-color, 2%);
