--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -592,7 +592,7 @@
 
       .nft-collection-list {
         .nft-collection-item {
-          margin-top: .5rem;
+          margin-bottom: .5rem;
         }
 
         .collection-title {
