--- a/styles/_feed.scss
+++ b/styles/_feed.scss
@@ -178,6 +178,7 @@
 
         .feed-target-description {
           display: -webkit-box;
+          margin-top: .25rem;
           text-overflow: ellipsis;
           overflow: hidden;
           padding-right: 1rem;
