--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -80,15 +80,17 @@ body {
     position: relative;
     border-radius: 1rem;
     height: 100%;
-    max-height: calc(100vh - 1rem);
+    max-height: 100vh;
     max-width: $size-xl;
     overflow-y: auto;
     padding: 2rem;
     scroll-behavior: smooth;
     width: 100%;
 
-    @supports (height: 100dvh) {
-      max-height: calc(100dvh - .5rem);
+    @media screen and (max-width: $size-sm) {
+      @supports (height: 100dvh) {
+        height: 100dvh;
+      }
     }
 
     @media screen and (max-width: $size-sm) {
