--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -112,15 +112,40 @@ body {
       width: 100%;
       height: 100%;
       background: #fff;
-      max-width: 90%;
+      max-width: $size-md;
       max-height: 90vh;
       margin: auto;
-      padding: 1.25rem;
+      padding: 2rem 4rem;
       box-sizing: border-box;
       overflow-y: auto;
       border-radius: .5rem;
-      img{
-        width: 100%;
+
+      @media screen and (max-width: $size-sm) {
+        padding: 1rem;
+      }
+
+      .modal-article-title {
+        font-size: 1.2rem;
+      }
+
+      img {
+        height: auto;
+        max-width: 100%;
+      }
+      
+      h1 {
+        font-size: 1.2rem;
+        font-weight: 700;
+      }
+
+      h2 {
+        font-size: 1rem;
+        font-weight: 700;
+      }
+
+      h3 {
+        font-size: .8rem;
+        font-weight: 700;
       }
     }
 
