--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -1057,7 +1057,7 @@
     .img-responsive,
     .video-responsive {
       border-radius: .8rem;
-      box-shadow: 0 .5rem 8rem var(--nft-primary-color);
+      filter: drop-shadow(var(--nft-primary-color) 0 0 4rem);
       height: auto;
       max-height: 80vh;
       max-width: 50vw;
