--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -150,45 +150,36 @@ body {
     }
 
     .modal-preview-container {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      position: relative;
 
-      .preview-image-container {
-        position: relative;
+      .btn {
+        width: unset;
+        height: unset;
+        padding: .2rem
+      }
 
-        .btn {
-          width: unset;
-          height: unset;
-          padding: .2rem
+      .external-icon {
+        opacity: 0;
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        transition: opacity .2s ease;
+
+        &:hover {
+          opacity: 1;
+        }
+      }
+
+      .preview-image {
+        .img-responsive,
+        .video-responsive {
+          max-height: 90vh;
+          max-width: 90vw;
         }
 
-        .external-icon {
-          opacity: 0;
-          position: absolute;
-          top: 1rem;
-          right: 1rem;
-          transition: opacity .2s ease;
-
-          &:hover {
+        &:hover {
+          & .external-icon {
             opacity: 1;
-          }
-        }
-
-        .modal-preview-image {
-          &:hover {
-            & + .external-icon {
-              opacity: 1;
-            }
-          }
-
-          object-fit: contain;
-
-          .video-responsive,
-          .img-responsive {
-            border-radius: .5rem;
           }
         }
       }
@@ -198,7 +189,7 @@ body {
       position: fixed;
       right: 1rem;
       top: 1rem;
-      z-index: 99;
+      z-index: 999;
     }
   }
 }
