Update search results

--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -662,7 +662,7 @@
                 .preview-network-name {
                   color: $dark-color;
                   display: none;
-                  padding: 0 .25rem;
+                  padding: 0 0 0 .25rem;
                 }
 
                 .preview-network-icon {
