--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -265,7 +265,7 @@
       }
 
       .action {
-        background: rgba($dark-color, .035);
+        // background: rgba($dark-color, .035);
         height: 1.8rem;
         line-height: 1.2rem;
         position: relative;
