--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -337,11 +337,11 @@
       box-shadow: inset 0 0 0 .05rem rgba($dark-color, .1), 0 .2rem .4rem rgba($dark-color, .15), 1rem 0 4rem 2rem var(--widget-bg-color);
       color: $light-color;
       display: flex;
-      flex: 0 0 2rem;
-      height: 2rem;
+      flex: 0 0 1.8rem;
+      height: 1.8rem;
       justify-content: center;
       transition: all .25s ease-in-out;
-      width: 2rem;
+      width: 1.8rem;
 
       &.website {
         background: $light-color;
@@ -349,9 +349,9 @@
 
         img {
           border-radius: .3rem;
-          height: 1.4rem;
+          height: 1.2rem;
           position: absolute;
-          width: 1.4rem;
+          width: 1.2rem;
         }
       }
     }
@@ -749,7 +749,7 @@
   .profile-widget-feeds {
     background: $light-color;
     border-color: lighten($bg-color, 3%);
-    height: 16rem;
+    height: 60vh;
     position: relative;
 
     .widget-feeds-container {
