--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -157,23 +157,23 @@
   .search-result-body {
     display: flex;
     flex-direction: column;
+    gap: .4rem;
     padding: 0 .4rem .4rem .4rem;
   }
 
   .social-item {
-    background: rgba($gray-color, .05);
+    background: rgba($gray-color, .1);
     border-radius: $border-radius;
     display: flex;
+    flex: 1 1 100%;
     flex-direction: column;
-    margin-bottom: .2rem;
     position: relative;
     transition: all .2s ease-in;
-    width: 100%;
 
     &:focus,
     &:hover {
-      background: rgba($gray-color, .1);
-      transform: translateY(-.1rem);
+      background: rgba($gray-color, .15);
+      transform: translateY(-.05rem);
 
       .actions {
         display: flex;
@@ -192,8 +192,24 @@
       order: -2;
     }
 
-    &:last-child {
-      margin-bottom: 0;
+    &.social-item-owner {
+      margin-left: 2rem;
+
+      .social-main {
+        &::after {
+          border-bottom: .1rem solid rgba($gray-color, .2);
+          border-left: .1rem solid rgba($gray-color, .2);
+          border-bottom-left-radius: .4rem;
+          content: "";
+          display: flex;
+          height: 2rem;
+          left: -.8rem;
+          overflow: hidden;
+          position: absolute;
+          top: -.2rem;
+          width: .8rem;
+        }
+      }
     }
 
     &.ethereum,
@@ -231,6 +247,7 @@
 
         .avatar-img {
           border-radius: .5rem;
+          object-fit: cover;
 
           & + .icon {
             bottom: -.6rem;
