--- a/styles/spectre/_menus.scss
+++ b/styles/spectre/_menus.scss
@@ -23,9 +23,10 @@
     user-select: none;
 
     &>a {
+      align-items: center;
       border-radius: $border-radius;
       color: inherit;
-      display: block;
+      display: flex;
       margin: 0 (-$unit-4);
       padding: $unit-2 $unit-2;
       text-decoration: none;
