--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -117,7 +117,7 @@
 }
 
 .global-loading {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
