--- a/styles/spectre/_menus.scss
+++ b/styles/spectre/_menus.scss
@@ -3,6 +3,7 @@
   @include shadow-variant(.1rem);
   background: $bg-color-light;
   border-radius: $border-radius;
+  color: $dark-color;
   font-size: .7rem;
   list-style: none;
   margin: 0;
