--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -452,6 +452,7 @@
   .profile-widget-nft {
     background: $light-color;
     border-color: lighten($bg-color, 3%);
+    gap: 0;
     overflow: hidden;
     padding-bottom: .75rem;
     position: relative;
@@ -522,12 +523,12 @@
     }
 
     .collection-switcher {
-      background: $light-color;
       user-select: none;
-      margin: 0 -1rem;
+      margin: .5rem -1rem 0 -1rem;
       overflow: hidden;
 
       .collection-list {
+        background: $light-color;
         display: flex;
         gap: .1rem;
         overflow: auto hidden;
@@ -595,10 +596,10 @@
           }
 
           .collection-badge {
-            background: rgba(lighten($bg-color, 6%), .9);
+            background: rgba(lighten($bg-color, 6%), .95);
             border-radius: .35rem;
             bottom: .15rem;
-            box-shadow: 0 .1rem .2rem rgba($dark-color, .1);
+            box-shadow: 0 0 0 .05rem rgba($dark-color, .05), 0 .1rem .2rem rgba($dark-color, .1);
             color: $gray-color-dark;
             font-size: .6rem;
             line-height: 1rem;
@@ -686,19 +687,29 @@
             .nft-img-container {
               margin-bottom: .5rem;
               position: relative;
-              overflow: hidden;
               transition: filter 0.3s ease-out;
               border-radius: .5rem;
 
+              .img-responsive {
+                aspect-ratio: 1 / 1;
+                border-radius: .5rem;
+                box-shadow: 0 .1rem .4rem rgba($dark-color, .05);
+                font-size: 4rem;
+                object-fit: cover;
+                width: 100%;
+                transition: filter 0.3s ease-out;
+              }
+
               .preview-network {
                 align-items: center;
-                background: $bg-color;
+                background: $light-color;
+                border: .05rem solid rgba($dark-color, .05);
                 border-radius: .4rem;
-                bottom: .5rem;
+                bottom: .25rem;
                 display: flex;
                 height: 1.25rem;
-                left: .5rem;
-                opacity: .75;
+                left: .25rem;
+                opacity: .85;
                 padding: .25rem;
                 position: absolute;
                 transition: all .25s ease-in-out;
@@ -715,7 +726,8 @@
                 .preview-network-name {
                   color: $dark-color;
                   display: none;
-                  padding: 0 0 0 .25rem;
+                  font-size: .6rem;
+                  padding: 0 0 0 .15rem;
                 }
 
                 .preview-network-icon {
@@ -723,25 +735,15 @@
                   width: .75rem;
                 }
               }
-
-              .img-responsive {
-                aspect-ratio: 1 / 1;
-                border-radius: .5rem;
-                box-shadow: 0 .2rem 1rem rgba($dark-color, .15), 0 .05rem .2rem rgba($dark-color, .05);
-                font-size: 4rem;
-                object-fit: cover;
-                width: 100%;
-                transition: filter 0.3s ease-out;
-              }
             }
 
             .nft-collection-name {
               color: $gray-color-dark;
-              font-size: .5rem;
+              font-size: .6rem;
             }
 
             .nft-name {
-              font-size: .75rem;
+              font-size: .8rem;
               font-weight: 700;
               letter-spacing: -.025em;
               text-overflow: ellipsis;
@@ -773,6 +775,24 @@
       margin: 0 -1rem;
       overflow-x: auto;
       padding: 0 1rem .2rem 1rem;
+
+      .poap-main {
+        border-radius: .4rem;
+        flex: 0 0 12rem;
+        padding: 0 1rem 0 0;
+        text-decoration: none;
+        width: 12rem;
+
+        .poap-main-title {
+          font-size: .8rem;
+          font-weight: 700;
+          letter-spacing: -.025em;
+        }
+
+        .poap-main-description {
+          font-size: .65rem;
+        }
+      }
 
       .poap-item {
         flex: 0 0 3.2rem;
@@ -1118,13 +1138,14 @@
 
     .preview-network {
       align-items: center;
-      background: $bg-color;
+      background: $light-color;
+      border: .05rem solid rgba($dark-color, .05);
       border-radius: .5rem;
       bottom: .5rem;
       display: flex;
       height: 1.5rem;
       left: .5rem;
-      opacity: .75;
+      opacity: .85;
       padding: .25rem;
       position: absolute;
       transition: all .25s ease-in-out;
@@ -1146,7 +1167,7 @@
       .preview-network-name {
         color: $dark-color;
         display: none;
-        padding: 0 .25rem;
+        padding: 0 .15rem;
       }
     }
   }
