--- a/styles/_share.scss
+++ b/styles/_share.scss
@@ -51,8 +51,10 @@
 
     .img-responsive {
       border-radius: .5rem;
-      width: 100%;
+      height: 12rem;
+      margin: 0 auto;
       transition: filter 0.3s ease-out;
+      width: auto;
     }
   }
 
