--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -52,6 +52,7 @@
     width: 9rem;
 
     .avatar {
+      aspect-ratio: 1 / 1;
       box-shadow: inset 0 0 0 .2rem rgba($light-color, .1), 0 .4rem 1rem rgba(0, 0, 0, .1);
       height: 9rem;
       position: relative;
