--- a/styles/_share.scss
+++ b/styles/_share.scss
@@ -33,17 +33,18 @@
     }
   }
 
-  .profile-card {
+  .profile-share-card {
+    aspect-ratio: 40 / 21;
+    background: $bg-color;
     position: relative;
     width: 100%;
     height: 100%;
     min-height: 10rem;
-    box-shadow: 0 .1rem .2rem rgba($dark-color, .01);
+    box-shadow: none;
     display: flex;
     border-radius: .5rem;
     flex-direction: column;
-    background: rgba($dark-color, .04);
-    padding: .5rem;
+    padding: .25rem;
 
     @media screen and (max-width: $size-md) {
       min-height: 8rem;
