--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -111,6 +111,11 @@ body {
       max-height: calc(100vh - 4rem);
       max-width: 28rem;
       padding: 2rem;
+      width: 95%;
+
+      @media screen and (max-width: $size-sm) {
+        padding: 1.5rem;
+      }
     }
 
     .modal-article-container {
