--- a/styles/_share.scss
+++ b/styles/_share.scss
@@ -34,18 +34,16 @@
   }
 
   .profile-share-card {
-    aspect-ratio: 40 / 21;
     background: $bg-color;
-    position: relative;
-    width: 100%;
+    border-radius: .5rem;
+    box-shadow: 0 -.05rem 2rem rgba($dark-color, .15), inset 0 -.05rem .1rem rgba($dark-color, .025);
+    display: flex;
+    flex-direction: column;
     height: 100%;
     min-height: 10rem;
-    box-shadow: none;
-    display: flex;
-    border-radius: .5rem;
-    flex-direction: column;
-    padding: .25rem;
-
+    position: relative;
+    width: 100%;
+    
     @media screen and (max-width: $size-md) {
       min-height: 8rem;
     }
