--- a/styles/spectre/_toasts.scss
+++ b/styles/spectre/_toasts.scss
@@ -1,12 +1,13 @@
 // Toasts
 .toast {
+  align-items: center;
   backdrop-filter: blur(2rem) saturate(120%) brightness(100%);
   background: rgba($dark-color, .8);
   border: .1rem solid rgba($dark-color, .1);
   border-radius: $border-radius-lg;
   box-shadow: 0 .2rem 2rem rgba($dark-color, .75);
   color: $light-color;
-  display: block;
+  display: flex;
   font-size: .8rem;
   padding: .8rem;
 
