chore: edge text temp

--- a/styles/_graph.scss
+++ b/styles/_graph.scss
@@ -82,7 +82,10 @@
     }
 
     .svg-canvas {
-
+      .edge-label{
+        font-size: 12px;
+        font-weight: 400;
+      }
       // circle style goes here
       .node {
         cursor: pointer;
