chore: node highlight

--- a/styles/_graph.scss
+++ b/styles/_graph.scss
@@ -141,6 +141,7 @@
       }
 
       .ens-icon {
+        pointer-events: none;
         cursor: pointer;
         width: 18px;
         height: 20px;
