chore: label selected

--- a/styles/_graph.scss
+++ b/styles/_graph.scss
@@ -104,6 +104,10 @@
         pointer-events: none;
       }
 
+      .edge-label-selected {
+        fill: #000;
+      }
+
       .node {
         cursor: pointer;
       }
