--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -315,6 +315,7 @@
     text-decoration: none;
     transition: all .25s ease-in-out;
     width: 100%;
+
     .emoji-large {
       font-size: 1.2rem;
     }
@@ -916,7 +917,7 @@
           object-fit: cover;
           width: 100%;
 
-          & + .rss-item-title {
+          &+.rss-item-title {
             font-size: .7rem;
           }
         }
@@ -1076,6 +1077,7 @@
       }
 
       .preview-image {
+
         .img-responsive,
         .video-responsive {
           max-width: 98vw;
@@ -1104,6 +1106,7 @@
     position: relative;
 
     &.preview-image-poap {
+
       .img-container,
       .img-responsive {
         border-radius: 50%;
@@ -1218,6 +1221,28 @@
 
           &:not(:first-child) {
             border-top: .05rem solid rgba($dark-color, 0.025);
+          }
+        }
+      }
+
+      .panel-widget-content {
+        .phi-rank {
+          width: fit-content;
+          align-items: center;
+          background: linear-gradient(124.2deg, #fff9d6 8%, #ffe2ba 34%, #f0a87c 74%, #f2a0b7 95%);
+          border-radius: .8rem;
+          display: flex;
+          gap: .25rem;
+          padding: .2rem .4rem .2rem .4rem;
+
+          .rank-label {
+          
+              border-radius: 1rem;
+              font-size: .6rem;
+              font-weight: 700;
+              line-height: .8rem;
+              height: .8rem;
+              text-shadow: rgba($dark-color, .95);
           }
         }
       }
