--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -817,8 +817,13 @@
   .profile-widget-feeds {
     background: $light-color;
     border-color: lighten($bg-color, 3%);
-    height: 60vh;
+    height: 100%;
+    max-height: 40vh;
     position: relative;
+
+    @media screen and (max-width: $size-sm) {
+      max-height: 60vh;
+    }
 
     .widget-feeds-container {
       overflow: hidden;
@@ -827,6 +832,7 @@
     &.active {
       box-shadow: 0 .4rem 1.6rem -.4rem rgba($dark-color, .15), 0 .1rem .2rem rgba($dark-color, .01);
       height: 100%;
+      max-height: none;
 
       .widget-feeds-container {
         overflow-y: auto;
@@ -930,6 +936,30 @@
     }
   }
 
+  // Phi Widget
+  .profile-widget-philand {
+    background: #FDECCD;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+
+    &:hover {
+      box-shadow: 0 .4rem 1.6rem -.4rem rgba($dark-color, .15), 0 .1rem .2rem rgba($dark-color, .01);
+      cursor: pointer;
+    }
+
+    .profile-widget-body {
+      align-items: center;
+      display: flex;
+      height: 6rem;
+
+      .img-philand {
+        position: absolute;
+        right: -2rem;
+      }
+    }
+  }
+
   // DegenScore Widget
   .profile-widget-degenscore {
     position: relative;
@@ -937,8 +967,8 @@
 
     .profile-widget-title {
       .label {
-        background: #a855f7;
-        box-shadow: inset 0 0 .25rem rgba($dark-color, .15), 0 .1rem .4rem rgba(#a855f7, .5);
+        background: darken(#a855f7, 25%);
+        box-shadow: inset 0 0 .25rem rgba($dark-color, .15);
         color: #fff;
       }
     }
@@ -1214,8 +1244,6 @@
             align-items: center;
             display: flex;
             font-size: .8rem;
-            font-weight: 700;
-            text-transform: uppercase;
 
             .icon-platform {
               display: flex;
