chore: social card duplicated objects

--- a/styles/_feed.scss
+++ b/styles/_feed.scss
@@ -113,7 +113,7 @@
       width: 100%;
       word-break: break-word;
 
-      .duplicated-tokens {
+      .duplicated-items {
         display: flex;
         flex-wrap: wrap;
         gap: 0.25rem;
