--- a/styles/_feed.scss
+++ b/styles/_feed.scss
@@ -268,6 +268,7 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         word-break: keep-all;
+        cursor: pointer;
 
         .feed-token-value {
           font-weight: 600;
