Update NFT collections in feeds

--- a/styles/_feed.scss
+++ b/styles/_feed.scss
@@ -183,32 +183,6 @@
         transition: all .25s ease-in-out;
         width: 100%;
 
-        &.collection-gallery {
-          height: 100%;
-          display: flex;
-          flex-wrap: nowrap;
-          gap: .25rem;
-          margin-bottom: -.25rem;
-          overflow: auto hidden;
-
-          .feed-content-img {
-            transition: all .5s ease;
-
-            &:hover {
-              &:not(:last-child) {
-                margin-right: 3rem;
-              }
-            }
-
-            &:not(:first-child) {
-              margin-left: -3rem;
-            }
-
-            flex: 0 0 auto;
-            max-width: 10rem;
-          }
-        }
-
         .feed-target-description {
           display: -webkit-box;
           margin-top: .25rem;
@@ -220,7 +194,9 @@
         }
 
         .feed-target-content {
-          margin-top: .25rem;
+          &:not(:first-child) {
+            margin-top: .25rem;
+          }
 
           &.media-gallery {
             display: flex;
@@ -267,6 +243,7 @@
         box-shadow: 0 .05rem .2rem rgba($dark-color, .05);
         display: inline-flex;
         flex-wrap: nowrap;
+        font-size: .7rem;
         gap: .2rem;
         height: 1.2rem;
         margin: .05rem;
@@ -299,7 +276,7 @@
 
         .feed-token-meta {
           color: $gray-color-dark;
-          font-size: 85%;
+          font-size: 90%;
           line-height: 1.2rem;
         }
       }
