--- a/styles/_feed.scss
+++ b/styles/_feed.scss
@@ -218,11 +218,11 @@
         }
 
         .feed-target-address {
-          bottom: .25rem;
           color: $gray-color;
           font-size: .7rem;
           position: absolute;
           right: .5rem;
+          top: .25rem;
         }
       }
 
